# push_alerts

./: MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: publish.yml
push_alerts/: __init__.py  email.py  push.py  telegram.py  whatsapp.py
src/push_alerts/: config.py  sms.py  utils.py  webhook.py
testes/: test_email.py  test_push.py  test_sms.py  test_telegram.py  test_webhook.py  test_whatsapp.py
