[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "push-alerts"
version = "0.1.0"
description = "A Python package for sending push notifications via Firebase, Email, SMS, WhatsApp, and Telegram."
authors = [
    {name = "Aditya Bharti", email = "adityabharti6088@gmail.com"}
]
license = {text = "MIT"}
dependencies = [
    "firebase-admin",
    "requests",
    "twilio",
    "fastapi",
    "python-telegram-bot",
    "python-dotenv"
]

[project.urls]
Homepage = "https://github.com/adityabharti83/push_alerts.git"
Repository = "https://github.com/adityabharti83/push_alerts.git"
