[metadata]
name = push-alerts
version = 0.1.0
description = A package to send push notifications via various services like Firebase, Email, SMS, etc.
long_description = file: README.md
long_description_content_type = text/markdown
author = Your Name
author_email = your-email@example.com
url = https://github.com/adityabharti83/push_alerts
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
install_requires =
    firebase-admin
    requests
    twilio
    python-telegram-bot
    pywhatkit

[options.package_data]
push_alerts = data/*

[options.entry_points]
console_scripts =
    push-alerts-cli = push_alerts.cli:main
